--- a/index.html
+++ b/index.html
@@ -3,120 +3,153 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AP Gitar Musik | Toko Gitar & Alat Musik</title>
-<meta name="description" content="AP Gitar Musik adalah toko gitar dan alat musik terpercaya. Produk original, harga bersahabat, pengiriman aman.">
+<title>AP Gitar Musik | Toko Gitar Profesional</title>
+<meta name="description" content="AP Gitar Musik adalah toko gitar dan alat musik terpercaya. Produk original, harga jujur, pengiriman aman.">
 
 <style>
+:root{
+  --dark:#0f0f0f;
+  --accent:#25d366;
+  --bg:#f4f6fb;
+  --card:#ffffff;
+}
+*{box-sizing:border-box}
 body{
-  margin:0;font-family:Arial,Helvetica,sans-serif;
-  background:#f4f4f4;color:#333;line-height:1.6
+  margin:0;font-family:'Segoe UI',Arial,sans-serif;
+  background:var(--bg);color:#333;line-height:1.6
 }
-header{
-  background:#111;color:#fff;padding:50px 20px;text-align:center
-}
+a{text-decoration:none;color:inherit}
 nav{
-  background:#000;padding:10px;text-align:center;position:sticky;top:0
+  background:var(--dark);
+  padding:14px 20px;
+  display:flex;justify-content:center;gap:18px;
+  position:sticky;top:0;z-index:99
 }
-nav a{
-  color:#fff;margin:0 10px;text-decoration:none;font-weight:bold
+nav a{color:#fff;font-weight:600}
+nav a:hover{color:var(--accent)}
+header{
+  background:linear-gradient(120deg,#000,#222);
+  color:#fff;padding:90px 20px;text-align:center
 }
-nav a:hover{color:#25d366}
-section{
-  padding:50px 20px;max-width:1100px;margin:auto
-}
-h2{text-align:center;margin-bottom:30px}
-.card{
-  background:#fff;padding:20px;border-radius:10px;
-  box-shadow:0 5px 15px rgba(0,0,0,.1)
-}
-.grid{
-  display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:20px
-}
+header h1{font-size:44px;margin:0}
+header p{opacity:.9;font-size:18px}
 .btn{
-  display:inline-block;background:#25d366;color:#fff;
-  padding:12px 22px;border-radius:30px;text-decoration:none
+  display:inline-block;margin-top:25px;
+  background:var(--accent);color:#fff;
+  padding:14px 30px;border-radius:30px;
+  font-weight:bold
 }
-.btn:hover{opacity:.9}
+section{
+  max-width:1200px;margin:auto;
+  padding:80px 20px
+}
+h2{text-align:center;font-size:34px;margin-bottom:50px}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:25px
+}
+.card{
+  background:var(--card);
+  padding:25px;border-radius:18px;
+  box-shadow:0 10px 30px rgba(0,0,0,.08)
+}
+.price{color:var(--accent);font-weight:bold}
+.search input{
+  width:100%;max-width:420px;
+  padding:14px 20px;
+  border-radius:30px;border:1px solid #ccc
+}
+details{
+  background:#fff;padding:20px;
+  border-radius:14px;margin-bottom:15px;
+  box-shadow:0 5px 15px rgba(0,0,0,.08)
+}
 footer{
-  background:#111;color:#aaa;text-align:center;padding:20px
-}
-input[type="search"]{
-  padding:10px;width:100%;max-width:400px;border-radius:20px;
-  border:1px solid #ccc
+  background:#111;color:#aaa;
+  text-align:center;padding:30px
 }
 .wa{
   position:fixed;right:20px;bottom:20px;
-  background:#25d366;color:#fff;
-  padding:15px;border-radius:50%;
-  text-decoration:none;font-weight:bold
+  background:var(--accent);
+  color:#fff;padding:16px;
+  border-radius:50%;font-weight:bold
 }
 </style>
 </head>
 
 <body>
 
-<header>
-<h1>AP Gitar Musik</h1>
-<p>Toko Gitar & Alat Musik Terpercaya</p>
-<a href="#produk" class="btn">Lihat Produk</a>
-</header>
-
 <nav>
+<a href="#home">Home</a>
 <a href="#profil">Profil</a>
 <a href="#produk">Produk</a>
-<a href="#galeri">Galeri</a>
-<a href="#blog">Artikel</a>
+<a href="#artikel">Artikel</a>
 <a href="#testimoni">Testimoni</a>
 <a href="#faq">FAQ</a>
 <a href="#kontak">Kontak</a>
 </nav>
 
+<header id="home">
+<h1>AP Gitar Musik</h1>
+<p>Toko Gitar & Alat Musik Profesional</p>
+<a href="#produk" class="btn">Lihat Produk</a>
+</header>
+
 <section>
 <h2>Pencarian</h2>
 <center>
-<input type="search" placeholder="Cari produk, artikel, atau info...">
+<div class="search">
+<input type="search" placeholder="Cari gitar, bass, aksesoris...">
+</div>
 </center>
 </section>
 
 <section id="profil">
 <h2>Profil Perusahaan</h2>
 <div class="card">
-<p><strong>AP Gitar Musik</strong> berdiri untuk menyediakan gitar dan alat musik berkualitas bagi pemula hingga profesional.</p>
-<p><strong>Visi:</strong> Menjadi toko alat musik terpercaya di Indonesia.</p>
-<p><strong>Misi:</strong> Produk original, harga jujur, pelayanan ramah.</p>
+<p><strong>AP Gitar Musik</strong> menyediakan gitar dan alat musik berkualitas untuk pemula hingga profesional.</p>
+<p><strong>Visi:</strong> Menjadi toko gitar terpercaya di Indonesia.</p>
+<p><strong>Misi:</strong> Produk original • Harga jujur • Pelayanan cepat</p>
 </div>
 </section>
 
 <section id="produk">
-<h2>Produk & Jasa</h2>
+<h2>Produk Unggulan</h2>
 <div class="grid">
-<div class="card"><h3>Gitar Akustik</h3><p>Mulai Rp 500.000</p></div>
-<div class="card"><h3>Gitar Elektrik</h3><p>Mulai Rp 1.200.000</p></div>
-<div class="card"><h3>Bass</h3><p>Mulai Rp 1.500.000</p></div>
-<div class="card"><h3>Aksesoris</h3><p>Senar, capo, strap, tuner</p></div>
+<div class="card">
+<h3>Gitar Akustik</h3>
+<p class="price">Mulai Rp 500.000</p>
+<p>Suara hangat & nyaman dimainkan</p>
+</div>
+<div class="card">
+<h3>Gitar Elektrik</h3>
+<p class="price">Mulai Rp 1.200.000</p>
+<p>Rock • Blues • Jazz</p>
+</div>
+<div class="card">
+<h3>Bass</h3>
+<p class="price">Mulai Rp 1.500.000</p>
+<p>Low end kuat & stabil</p>
+</div>
+<div class="card">
+<h3>Aksesoris</h3>
+<p class="price">Lengkap</p>
+<p>Senar, capo, strap, tuner</p>
+</div>
 </div>
 </section>
 
-<section id="galeri">
-<h2>Galeri</h2>
-<div class="grid">
-<div class="card">Foto Produk 1</div>
-<div class="card">Foto Produk 2</div>
-<div class="card">Foto Toko</div>
-</div>
-</section>
-
-<section id="blog">
+<section id="artikel">
 <h2>Berita & Artikel</h2>
 <div class="grid">
 <div class="card">
 <h3>Tips Memilih Gitar Pemula</h3>
-<p>Panduan memilih gitar yang nyaman & awet.</p>
+<p>Jangan salah beli gitar pertama.</p>
 </div>
 <div class="card">
-<h3>Perbedaan Gitar Akustik & Elektrik</h3>
-<p>Cocokkan dengan gaya bermainmu.</p>
+<h3>Perawatan Gitar Agar Awet</h3>
+<p>Suara tetap stabil & jernih.</p>
 </div>
 </div>
 </section>
@@ -124,24 +157,28 @@ input[type="search"]{
 <section id="testimoni">
 <h2>Testimoni Pelanggan</h2>
 <div class="grid">
-<div class="card">⭐⭐⭐⭐⭐<br>“Barang bagus & cepat sampai.”</div>
-<div class="card">⭐⭐⭐⭐⭐<br>“CS ramah, recommended.”</div>
+<div class="card">⭐⭐⭐⭐⭐<br>“Packing rapi & aman.”</div>
+<div class="card">⭐⭐⭐⭐⭐<br>“CS cepat & ramah.”</div>
 </div>
 </section>
 
 <section id="faq">
 <h2>FAQ</h2>
-<div class="card">
-<p><strong>Apakah produk original?</strong><br>Ya, 100% original.</p>
-<p><strong>Bisa kirim ke luar kota?</strong><br>Bisa, seluruh Indonesia.</p>
-</div>
+<details>
+<summary>Apakah produk original?</summary>
+<p>Ya, semua produk 100% original.</p>
+</details>
+<details>
+<summary>Bisa kirim ke seluruh Indonesia?</summary>
+<p>Bisa, pengiriman aman & bergaransi.</p>
+</details>
 </section>
 
 <section id="kontak">
 <h2>Kontak & Lokasi</h2>
 <div class="card">
 <p>📞 WhatsApp: 08xxxxxxxxxx</p>
-<p>📍 Alamat: Indonesia</p>
+<p>📍 Indonesia</p>
 </div>
 </section>
 
