--- a/index.html
+++ b/index.html
@@ -3,249 +3,253 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AP Gitar Musik | Toko Alat Musik Profesional</title>
-<meta name="description" content="AP Gitar Musik menyediakan gitar akustik, elektrik, bass, dan aksesoris. Konsultasi jujur, kualitas terjamin, kirim aman.">
+<title>AP Gitar Musik | Toko Gitar Profesional</title>
 
 <style>
-:root{--dark:#0b0b0b;--accent:#25d366;--bg:#f3f5fa;--card:#fff}
+:root{
+  --primary:#ffb703;
+  --dark:#0f172a;
+  --soft:#f1f5f9;
+  --glass:rgba(255,255,255,0.15);
+}
+
 *{box-sizing:border-box}
-html{scroll-behavior:smooth}
-body{margin:0;font-family:Segoe UI,Arial,sans-serif;background:var(--bg);color:#333;line-height:1.9}
-img{max-width:100%;border-radius:18px}
-a{text-decoration:none;color:inherit}
+body{
+  margin:0;
+  font-family:'Segoe UI',sans-serif;
+  background:linear-gradient(180deg,#020617,#020617);
+  color:#111;
+  scroll-behavior:smooth;
+}
 
-/* NAV */
-nav{position:sticky;top:0;z-index:999;display:flex;gap:22px;justify-content:center;
-background:rgba(0,0,0,.9);backdrop-filter:blur(8px);padding:14px}
-nav a{color:#fff;font-weight:600}
-nav a:hover{color:var(--accent)}
+/* ===== HERO ===== */
+.hero{
+  min-height:100vh;
+  background:
+  linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),
+  url('img/hero.jpg') center/cover;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  padding:20px;
+}
+.hero h1{
+  color:#fff;
+  font-size:3rem;
+  margin-bottom:10px;
+}
+.hero p{
+  color:#e5e7eb;
+  font-size:1.2rem;
+  max-width:600px;
+  margin:auto;
+}
+.hero a{
+  display:inline-block;
+  margin-top:25px;
+  background:linear-gradient(135deg,#22c55e,#16a34a);
+  color:#fff;
+  padding:14px 28px;
+  border-radius:50px;
+  text-decoration:none;
+  font-weight:bold;
+  box-shadow:0 15px 40px rgba(0,0,0,.4);
+}
 
-/* HERO */
-header{
-background:
-linear-gradient(rgba(0,0,0,.65),rgba(0,0,0,.65)),
-url('img/hero.jpg');
-background-size:cover;background-position:center;
-color:#fff;text-align:center;padding:150px 20px}
-header h1{font-size:56px;margin:0}
-header p{max-width:900px;margin:28px auto;font-size:21px}
+/* ===== SECTION GLOBAL ===== */
+section{
+  padding:80px 20px;
+}
+h2{
+  text-align:center;
+  font-size:2.2rem;
+  margin-bottom:20px;
+}
+.desc{
+  max-width:800px;
+  margin:0 auto 50px;
+  text-align:center;
+  color:#334155;
+}
 
-/* BTN */
-.btn{display:inline-block;background:var(--accent);color:#fff;
-padding:18px 42px;border-radius:50px;font-weight:800;font-size:18px}
-
-/* SECTION */
-section{max-width:1200px;margin:auto;padding:110px 20px}
-h2{text-align:center;font-size:40px;margin-bottom:70px}
-
-/* GRID */
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:36px}
+/* ===== PRODUK ===== */
+.produk{
+  background:linear-gradient(180deg,#f8fafc,#e2e8f0);
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:25px;
+  max-width:1100px;
+  margin:auto;
+}
 .card{
-background:var(--card);padding:34px;border-radius:26px;
-box-shadow:0 18px 50px rgba(0,0,0,.1);
-opacity:0;transform:translateY(40px);transition:.9s}
-.card.show{opacity:1;transform:none}
-.price{color:var(--accent);font-weight:900;font-size:20px}
+  background:linear-gradient(180deg,#ffffff,#f8fafc);
+  border-radius:20px;
+  overflow:hidden;
+  box-shadow:0 25px 50px rgba(0,0,0,.15);
+  transition:.3s;
+}
+.card:hover{transform:translateY(-8px)}
+.card img{
+  width:100%;
+  height:200px;
+  object-fit:cover;
+}
+.card .c{
+  padding:20px;
+}
+.card h3{margin:0 0 10px}
+.card p{color:#475569;font-size:.95rem}
+.card strong{color:#0f172a}
+.card a{
+  display:block;
+  margin-top:15px;
+  background:#0f172a;
+  color:#fff;
+  text-align:center;
+  padding:12px;
+  border-radius:12px;
+  text-decoration:none;
+}
 
-/* SEARCH */
-.search{max-width:520px;margin:0 auto 50px}
-.search input{
-width:100%;padding:16px 22px;border-radius:50px;border:1px solid #ddd;font-size:16px}
+/* ===== GALERI ===== */
+.galeri{
+  background:linear-gradient(135deg,#020617,#020617,#020617);
+  color:#fff;
+}
+.galeri img{
+  width:100%;
+  border-radius:15px;
+  box-shadow:0 20px 40px rgba(0,0,0,.6);
+}
 
-/* FAQ */
-.faq-item{border-bottom:1px solid #eee;padding:18px 0;cursor:pointer}
-.faq-item h4{margin:0}
-.faq-item p{display:none;margin:14px 0 0;color:#555}
+/* ===== TESTIMONI ===== */
+.testimoni{
+  background:linear-gradient(180deg,#f1f5f9,#ffffff);
+}
+.testi-box{
+  max-width:900px;
+  margin:auto;
+  background:linear-gradient(135deg,#ffffff,#f8fafc);
+  border-radius:25px;
+  padding:30px;
+  box-shadow:0 30px 60px rgba(0,0,0,.2);
+}
+.testi-box p{font-size:1.05rem;color:#334155}
 
-/* FOOTER */
-footer{background:#0b0b0b;color:#aaa;text-align:center;padding:45px}
+/* ===== FAQ ===== */
+.faq{
+  background:linear-gradient(180deg,#020617,#020617);
+  color:#fff;
+}
+.faq details{
+  max-width:800px;
+  margin:15px auto;
+  background:rgba(255,255,255,.08);
+  padding:15px 20px;
+  border-radius:12px;
+}
 
-/* WA */
-.wa{position:fixed;right:22px;bottom:22px;background:var(--accent);color:#fff;
-padding:20px;border-radius:50%;font-weight:900;box-shadow:0 12px 35px rgba(0,0,0,.35)}
+/* ===== FOOTER ===== */
+footer{
+  background:linear-gradient(135deg,#020617,#020617);
+  color:#94a3b8;
+  text-align:center;
+  padding:40px 20px;
+}
+
+@media(max-width:600px){
+  .hero h1{font-size:2.2rem}
+}
 </style>
 </head>
 
 <body>
 
-<nav>
-<a href="#home">Home</a>
-<a href="#tentang">Tentang</a>
-<a href="#produk">Produk</a>
-<a href="#galeri">Galeri</a>
-<a href="#edukasi">Edukasi</a>
-<a href="#faq">FAQ</a>
-<a href="#kontak">Kontak</a>
-</nav>
-
-<header id="home">
-<h1>AP Gitar Musik</h1>
-<p>
-Kami tidak sekadar menjual alat musik.
-Kami membantu musisi—pemula hingga profesional—
-menemukan instrumen yang benar-benar cocok dengan karakter dan tujuan bermainnya.
-Setiap produk kami seleksi, cek, dan rekomendasikan dengan jujur.
-</p>
-<a href="#produk" class="btn">Lihat Produk</a>
-</header>
-
-<section id="tentang">
-<h2>Tentang AP Gitar Musik</h2>
-<div class="grid">
-<div class="card">
-<p>
-Berangkat dari kecintaan pada musik, AP Gitar Musik hadir
-sebagai partner perjalanan musikal Anda.
-Kami mengutamakan edukasi, transparansi, dan kepuasan jangka panjang.
-</p>
-<p>
-Belanja aman, konsultasi terbuka, dan dukungan penuh sebelum & sesudah pembelian.
-</p>
+<!-- HERO -->
+<div class="hero">
+  <div>
+    <h1>AP Gitar Musik</h1>
+    <p>Toko gitar profesional dengan kualitas terjamin, harga jujur, dan pengiriman aman ke seluruh Indonesia.</p>
+    <a href="https://wa.me/62XXXXXXXXXX">Chat WhatsApp</a>
+  </div>
 </div>
-<img class="card" src="img/toko.jpg">
-</div>
-</section>
 
-<section id="produk">
+<!-- PRODUK -->
+<section class="produk">
 <h2>Produk Unggulan</h2>
+<p class="desc">Kami menyediakan berbagai jenis gitar dan aksesoris pilihan yang telah melalui seleksi kualitas.</p>
 
-<div class="search">
-<input type="text" id="search" placeholder="Cari gitar, bass, aksesoris...">
-</div>
-
-<div class="grid" id="productList">
-
-<div class="card product">
+<div class="grid">
+<div class="card">
 <img src="img/gitar-akustik.jpg">
-<h3>Gitar Akustik Solid Top</h3>
-<p class="price">Rp 1.250.000</p>
-<p>
-Karakter suara hangat dan seimbang,
-nyaman untuk belajar serius hingga tampil akustikan.
-</p>
-<a class="btn" target="_blank"
-href="https://wa.me/628xxxxxxxxxx?text=Halo%20saya%20ingin%20beli%20Gitar%20Akustik%20Solid%20Top%20harga%201.250.000">
-Beli Sekarang</a>
+<div class="c">
+<h3>Gitar Akustik</h3>
+<p>Kayu solid pilihan, suara hangat dan seimbang. Cocok untuk pemula hingga profesional.</p>
+<strong>Mulai Rp 500.000</strong>
+<a href="#">Pesan Sekarang</a>
+</div>
 </div>
 
-<div class="card product">
+<div class="card">
 <img src="img/gitar-elektrik.jpg">
-<h3>Gitar Elektrik Modern</h3>
-<p class="price">Rp 1.950.000</p>
-<p>
-Fleksibel untuk rock, blues, jazz, hingga pop modern.
-Setup rapi dan nyaman dimainkan.
-</p>
-<a class="btn" target="_blank"
-href="https://wa.me/628xxxxxxxxxx?text=Halo%20saya%20ingin%20beli%20Gitar%20Elektrik%20Modern%20harga%201.950.000">
-Beli Sekarang</a>
+<div class="c">
+<h3>Gitar Elektrik</h3>
+<p>Sound powerful untuk rock, blues, jazz. Setup rapi & nyaman dimainkan.</p>
+<strong>Mulai Rp 1.200.000</strong>
+<a href="#">Pesan Sekarang</a>
+</div>
 </div>
 
-<div class="card product">
+<div class="card">
 <img src="img/bass.jpg">
-<h3>Bass Elektrik Solid</h3>
-<p class="price">Rp 2.100.000</p>
-<p>
-Low end kuat dan stabil untuk latihan band,
-recording, maupun panggung.
-</p>
-<a class="btn" target="_blank"
-href="https://wa.me/628xxxxxxxxxx?text=Halo%20saya%20ingin%20beli%20Bass%20Elektrik%20Solid%20harga%202.100.000">
-Beli Sekarang</a>
+<div class="c">
+<h3>Bass</h3>
+<p>Low end tebal, stabil, cocok untuk recording & live performance.</p>
+<strong>Mulai Rp 1.500.000</strong>
+<a href="#">Pesan Sekarang</a>
 </div>
-
+</div>
 </div>
 </section>
 
-<section id="galeri">
-<h2>Galeri Aktivitas</h2>
+<!-- GALERI -->
+<section class="galeri">
+<h2>Galeri Produk</h2>
 <div class="grid">
-<img class="card" src="img/galeri1.jpg">
-<img class="card" src="img/galeri2.jpg">
-<img class="card" src="img/galeri3.jpg">
+<img src="img/galeri1.jpg">
+<img src="img/galeri2.jpg">
+<img src="img/galeri3.jpg">
 </div>
 </section>
 
-<section id="edukasi">
-<h2>Artikel & Edukasi</h2>
-<div class="grid">
-<div class="card">
-<h3>Tips Memilih Gitar yang Tepat</h3>
-<p>
-Ukuran body, jenis senar, dan karakter suara
-adalah faktor krusial yang sering terlewat oleh pemula.
-</p>
-</div>
-<div class="card">
-<h3>Perawatan Alat Musik</h3>
-<p>
-Perawatan sederhana namun konsisten
-membuat instrumen awet dan stabil bertahun-tahun.
-</p>
-</div>
+<!-- TESTIMONI -->
+<section class="testimoni">
+<h2>Testimoni Pelanggan</h2>
+<div class="testi-box">
+<p>“Awalnya ragu beli gitar online, tapi setelah sampai kualitasnya bener-bener bagus. Packing aman, suara enak, admin ramah. Recomended!”</p>
+<strong>— Pelanggan AP Gitar Musik</strong>
 </div>
 </section>
 
-<section id="faq">
+<!-- FAQ -->
+<section class="faq">
 <h2>Pertanyaan Umum</h2>
-<div class="card faq-item">
-<h4>Apakah bisa konsultasi sebelum beli?</h4>
-<p>Tentu. Kami sangat menyarankan konsultasi agar pilihan tepat.</p>
-</div>
-<div class="card faq-item">
-<h4>Apakah pengiriman aman?</h4>
-<p>Kami menggunakan packing berlapis dan standar pengiriman aman.</p>
-</div>
-<div class="card faq-item">
-<h4>Apakah cocok untuk pemula?</h4>
-<p>Sangat cocok. Kami bantu dari nol sampai siap bermain.</p>
-</div>
-</section>
-
-<section id="kontak">
-<h2>Kontak & Pemesanan</h2>
-<div class="card">
-<p>
-Butuh rekomendasi atau mau tanya detail?
-Klik WhatsApp dan ceritakan kebutuhan musik Anda.
-</p>
-<p>📞 WhatsApp: 08xxxxxxxxxx</p>
-<p>📍 Indonesia</p>
-</div>
+<details>
+<summary>Apakah produknya original?</summary>
+<p>Ya, semua produk dijamin original dan dicek sebelum pengiriman.</p>
+</details>
+<details>
+<summary>Pengiriman aman?</summary>
+<p>Kami gunakan packing berlapis dan ekspedisi terpercaya.</p>
+</details>
 </section>
 
 <footer>
-<p>© 2026 AP Gitar Musik — Profesional • Jujur • Terpercaya</p>
+<p>© 2026 AP Gitar Musik • Profesional • Terpercaya</p>
 </footer>
-
-<a class="wa" href="https://wa.me/628xxxxxxxxxx" target="_blank">WA</a>
-
-<script>
-/* Animasi Scroll */
-const cards=document.querySelectorAll('.card');
-const obs=new IntersectionObserver(e=>{
-e.forEach(x=>x.isIntersecting&&x.target.classList.add('show'));
-},{threshold:.15});
-cards.forEach(c=>obs.observe(c));
-
-/* Live Search */
-const search=document.getElementById('search');
-const products=document.querySelectorAll('.product');
-search.addEventListener('input',()=>{
-const q=search.value.toLowerCase();
-products.forEach(p=>{
-p.style.display=p.innerText.toLowerCase().includes(q)?'block':'none';
-});
-});
-
-/* FAQ Toggle */
-document.querySelectorAll('.faq-item').forEach(f=>{
-f.addEventListener('click',()=>{
-const p=f.querySelector('p');
-p.style.display=p.style.display==='block'?'none':'block';
-});
-});
-</script>
 
 </body>
 </html>
